[package]
name = "ncmdump-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.3"
clap = { version = "4.4.1", features = ["derive"] }
openssl = "0.10.57"
serde_json = "1.0.105"
